--- a/FA19-BSSE-0032/jw_style.css
+++ b/FA19-BSSE-0032/jw_style.css
@@ -18,7 +18,17 @@
 html {
     scroll-behavior: smooth;
 }
-
+.text-center
+{
+    text-align: center;
+}
+.text-justify-term
+{
+    text-align: justify;
+    border: 2px solid silver;
+    border-radius: 20px;
+    padding:20px;
+}
 .nav3 {
     display: flex;
     padding: 2px;
@@ -136,7 +146,21 @@ html {
     padding         : 8px;
     border-radius   : 0;
 }
-
+.btn-payment{
+    color           : white;
+    background-color: #b0a171;
+    border          : none;
+    padding         : 8px;
+    border-radius   : 8px;
+}
+.btn-payment-1{
+    color           : white;
+    background-color: green;
+    border          : none;
+    padding         : 8px;
+    border-radius   : 8px;
+    float: left;
+}
 .heading {
     margin-top    : 20px;
     font-weight   : bold;
@@ -730,7 +754,24 @@ footer {
 .cart-body-footer .cart-body-footer-update {
     color: #b0a171;
 }
-
+.cart-quentity
+{
+    cursor: pointer;
+    border-radius: 10px;
+    box-sizing: border-box;
+    background-color: #b0a171;
+    display: flex;
+    color:white;
+    font-weight: 400;
+    top: 0;
+    margin-left: 10px;
+    height: 20px;
+    width: 20px;
+    vertical-align: middle;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+}
 .check-out-header {
     display         : flex;
     justify-content : space-around;
@@ -975,7 +1016,10 @@ footer #line {
 #myPlot {
     width: 100%;
 }
-
+.forgetpass{
+    display: flex;
+    justify-content: center;
+}
 @media only screen and (max-width: 630px) {
     #divimg img {
         height: 500px;
@@ -1069,7 +1113,13 @@ footer #line {
     .h1 {
         font-size: 50px;
     }
-
+    #signup .forgetpass
+    {
+        width        : 100%;
+        margin-bottom: 20px;
+        margin-right : 0;
+        font-size: 13px;
+    } 
     #signup .login {
         width        : 100%;
         margin-bottom: 20px;
